add routes to create from angular front end

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -16,6 +16,8 @@
     Standards app
     <a href="/">Home</a>
     <a href="/standards">Standards</a>
+    <a href="/standards/create">Create</a>
+    <a href="/standards/new">New</a>
 
     <div ng-view></div>
 
