begin login process

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -19,6 +19,9 @@
     <a href="/standards/create">Create</a>
     <a href="/standards/new">New</a>
 
+    <a href="/users/login">Login User</a>
+    <a href="/users/logout">Logout User</a>
+
     <div ng-view></div>
 
   </body>
